--- a/datingapp.html
+++ b/datingapp.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dating-app</title>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-
+      // fetching, try & catch:
+      async function fetchRandomUser() {
+        try {
+          const response = await fetch("https://randomuser.me/api");
+          const randomUser = await response.json();
+          console.log(randomUser);
+        } catch (error) {
+          console.log(
+            "Uh oh, something has gone wrong. Please tweet us @randomapi about the issue. Thank you.",
+            error
+          );
+        }
+      }
+      fetchRandomUser();
     </script>
-</body>
+  </body>
 </html>
