--- a/datingapp.html
+++ b/datingapp.html
@@ -6,7 +6,16 @@
     <title>Dating-app</title>
   </head>
   <body>
+    <!--- knapper til dating-siden -->
+    <button id="women-btn">Women</button>
+    <button id="men-btn">Men</button>
+    <button id="both-btn">Men & Women</button>
+    
     <script>
+        const womenBtn = document.getElementById("women-btn");
+        const menBtn = document.getElementById("men-btn");
+        const bothBtn = document.getElementById("both-btn");
+
       // fetching, try & catch:
       async function fetchRandomUser() {
         try {
