--- a/hundepasserapp.html
+++ b/hundepasserapp.html
@@ -41,17 +41,16 @@
       // fetching, try & catch:
       async function fetchRandomUser() {
         try {
-          const response = await fetch("https://randomuser.me/api");
+          const response = await fetch('https://randomuser.me/api/?results=10');
           const randomUser = await response.json();
-          console.log(randomUser);
+          return randomUser.results;
         } catch (error) {
           console.log(
-            "Uh oh, something has gone wrong. Please tweet us @randomapi about the issue. Thank you.",
+            'Uh oh, something has gone wrong. Please tweet us @randomapi about the issue. Thank you.',
             error
           );
         }
       }
-      fetchRandomUser();
 
       const profileCardsContainer = document.getElementById('profile-cards');
 
@@ -64,26 +63,32 @@
 
           return data.message;
         } catch (error) {
-            console.log("Error, noe er feil. Kom tilbake senere", error);
-
+          console.log('Error, noe er feil. Kom tilbake senere', error);
         }
       }
 
       async function generateProfileCards() {
+        const users = await fetchRandomUser();
         profileCardsContainer.innerHTML = '';
-        const times = 10;
-
-        for (let i = 0; i < times; i++) {
+        users.forEach(async (user) => {
           const dogImage = await fetchRandomDog();
           const card = document.createElement('div');
           card.classList.add('profile-card');
           card.innerHTML = `
+            </div>
+                <img src="${user.picture.medium}" alt="Dog">
+                <p>Name: ${user.name.first} ${user.name.last}</p>
+                <p>Location: ${user.location.city}, ${user.location.country}</p>
+            </div>
             <img src="${dogImage}" alt="Dog">
-            <button>Delete</button>
-            <button>Chat</button>
+            <button onclick="deleteCard(this)">Delete</button>
           `;
           profileCardsContainer.appendChild(card);
-        }
+        });
+      }
+
+      function deleteCard(button) {
+        button.parentNode.remove();
       }
 
       generateProfileCards();
