--- a/hundepasserapp.html
+++ b/hundepasserapp.html
@@ -39,9 +39,11 @@
 
     <script>
       // fetching, try & catch:
-      async function fetchRandomUser() {
+      async function fetchRandomUser(results = 10) {
         try {
-          const response = await fetch('https://randomuser.me/api/?results=10');
+          const response = await fetch(
+            `https://randomuser.me/api/?results=${results}`
+          );
           const randomUser = await response.json();
           return randomUser.results;
         } catch (error) {
@@ -87,10 +89,25 @@
         });
       }
 
-      function deleteCard(button) {
+      async function deleteCard(button) {
         button.parentNode.remove();
+        const users = await fetchRandomUser(1);
+        users.forEach(async (user) => {
+          const dogImage = await fetchRandomDog();
+          const card = document.createElement('div');
+          card.classList.add('profile-card');
+          card.innerHTML = `
+            </div>
+                <img src="${user.picture.medium}" alt="Dog">
+                <p>Name: ${user.name.first} ${user.name.last}</p>
+                <p>Location: ${user.location.city}, ${user.location.country}</p>
+            </div>
+            <img src="${dogImage}" alt="Dog">
+            <button onclick="deleteCard(this)">Delete</button>
+          `;
+          profileCardsContainer.appendChild(card);
+        });
       }
-
       generateProfileCards();
     </script>
   </body>
